--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
     - docker build -t alexeyca/docker-react -f Dockerfile.dev .
 
 script:
-    - docker run alexeyca/docker-react npm run test -- --coverage
+    - docker run -e CI=true alexeyca/docker-react npm run test -- --coverage
