--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo: required
+# sudo: required
 services:
     - docker
 
@@ -7,3 +7,7 @@ before_install:
 
 script:
     - docker run -e CI=true alexeyca/docker-react npm run test -- --coverage
+
+deploy:
+    provider: elasticbeanstalk
+    region: us-east-2
