--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,13 @@ script:
 
 deploy:
     provider: elasticbeanstalk
-    region: us-east-2
+    region: "us-east-2"
+    app: "docker-react"
+    env: "docker"
+    bucket_name: "elasticbeanstalk-us-east-2-394211108142"
+    bucket_path: "docker-react"
+    on:
+        branch: master
+    access_key_id: "$AWS_ACCESS_KEY"
+    secret_access_key:
+        secure: "$AWS_SECRET_KEY"
